cluster/apps/foundry/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: foundry
  namespace: foundry
spec:
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:9.269.0
          ports:
            - containerPort: 30000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundry-data
  serviceName: foundry
