cluster/apps/foundry/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: foundry
  namespace: foundry
spec:
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundryvtt
          image: felddy/foundryvtt:10.274.0
          ports:
            - containerPort: 30000
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
  serviceName: foundry
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
